Fixed hero image sizing issues on smaller screens

--- a/src/templates/styles/Hero.module.scss
+++ b/src/templates/styles/Hero.module.scss
@@ -102,7 +102,7 @@
 
     @media (max-width: 640px) {
       width: auto;
-      height: 23rem;
+      height: 20rem;
     }
   }
 }
